examples/test/testpolicy381.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy381
  namespace: namespace218
spec:
  podSelector:
    matchLabels:
      key26: value3
      key48: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value43
          key30: value43
          key10: value28
      podSelector:
        matchLabels:
          key37: value17
